version 0.3.3a (07/16/2003):

version 0.3.3 (07/15/2003):

07/14/2003 Bob Rossi <bob_rossi@brasko.net>

	* input.h: added CGDB_KEY_CTRL_* to cgdb_input_macro
	* input.c: added CGDB_KEY_CTRL_* to add_keybindings

version 0.3.2 (06/25/2003):

06/23/2003 Bob Rossi <bob_rossi@cox.net>

	* input.c: input_read, now calls io_data_ready instead of hard-codeing
	the useful functionality into it. Now others can use this functionality.

04/14/2003 Bob Rossi <bob_rossi@cox.net>
   
   * Changed time out for esc sequences from 1000 to 40000: I found 
   a computer where 1000 was to slow.

version 0.3.1 (04/28/2003):

version 0.3.0 (04/11/2003):

04/01/2003 Bob Rossi <bob_rossi@cox.net>

    * Automatically building getch_driver and input_driver: This is done
    because 'make' seems to be failing to build the programs correctly
    when they are extra's. Its probably a configure problem that needs to
    be solved.

03/30/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed input.c to work when some esc sequences are subsets of others:
    The input unit now reads the next char to see if the current esc seq
    is a subset of a longer esc seq. The unit always returns the longest
    esc sequence.

03/29/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed all files to work with autoconf: All of the files that make up
    the input lib now test to see if a header is available before it is 
    included.

03/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Adding an initial list of key alt and alt-shift key bindings
    * Commenting out most alt, shift-alt key bindings: These new key bindings 
    are breaking the input library. They are getting confused with other
    longer key mappings that have the alt-key mappings as a subset.
    * Removed printf's from input.c: Now it writes to err_msg

03/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Adding the Alt-A through Alt-Z key bindings

03/25/2003 Bob Rossi <bob_rossi@cox.net>
